Finish required api

--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
       <a href="#" class="">Jeans</a>
       <a href="#" class="">Jackets</a>
       <a href="#" class="">Gymwear</a>
-      <a href="#" class="">Blazers</a>
+      <a href="#" class="">Sweaters</a>
       <a href="#" class="">Shoes</a>
     </div>
   </header>
