--- a/client/index.html
+++ b/client/index.html
@@ -1,93 +1,47 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href='https://fonts.googleapis.com/css?family=Montserrat:700,400' rel='stylesheet' type='text/css'>
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"></script>
+  <link href='https://fonts.googleapis.com/css?family=Montserrat:700,400' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
   <title>E-commerce</title>
 </head>
 
 <body>
-  <header class="header-bar">
-    <div class="logo"><i class="fas fa-stroopwafel"></i></div>
-    <div class="header-menu">
-      <a href="#" class="">Shirts</a>
-      <a href="#" class="">Dresses</a>
-      <a href="#" class="">Jeans</a>
-      <a href="#" class="">Jackets</a>
-      <a href="#" class="">Gymwear</a>
-      <a href="#" class="">Sweaters</a>
-      <a href="#" class="">Shoes</a>
-    </div>
-  </header>
 
-  <div class="container">
-    <div class="list">
-      <article class="list--item">
-        <figure>
-          <img src="//placehold.it/250x250" alt="">
-          <header>
-            <div class="floater">
-
-            </div>
-            <h2>Title</h2>
-          </header>
-          <figcaption>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          </figcaption>
-        </figure>
-      </article>
-      <article class="list--item">
-        <figure>
-          <img src="//placehold.it/250x250" alt="">
-          <header>
-            <div class="floater">
-
-            </div>
-            <h2>Title</h2>
-          </header>
-          <figcaption>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          </figcaption>
-        </figure>
-      </article>
-      <article class="list--item">
-        <figure>
-          <img src="//placehold.it/250x250" alt="">
-          <header>
-            <div class="floater">
-
-            </div>
-            <h2>Title</h2>
-          </header>
-          <figcaption>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          </figcaption>
-        </figure>
-      </article>
-      <article class="list--item">
-        <figure>
-          <img src="//placehold.it/250x250" alt="">
-          <header>
-            <div class="floater">
-
-            </div>
-            <h2>Title</h2>
-          </header>
-          <figcaption>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          </figcaption>
-        </figure>
-      </article>
-    </div>
+  <div id="app">
+      <content-page></content-page>
   </div>
+  
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
+    crossorigin="anonymous"></script>
+  <script src="./components/login.js"></script>
+  <script src="./components/register.js"></script>
+  <script src="./components/cart.js"></script>
+  <script src="./components/page.js"></script>
   <script>
+    new Vue({
+      el: "#app",
+      data: {
+        
+      },
+      methods: {
+        
+      }
+    })
   </script>
 </body>
 
